<resources>
    <string name="app_name">Doge Suck</string>
    <string name="logo">Logo</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="version">version</string>
    <string name="empty">\s can not be empty</string>
    <string name="error404">Your connection was lost when sending data</string>
    <string name="error500">An error occurred while receiving data</string>
    <string name="sponsor">Sponsor</string>
    <string name="term">I agree to the provisions in force</string>
    <string name="email">Email</string>
    <string name="name">name</string>
    <string name="logout">Logout</string>
    <string name="icon">Icon</string>
    <string name="level">Level</string>
    <string name="refresh">Refresh</string>
    <string name="manual">Manual</string>
    <string name="labouchere">Labouchere</string>
    <string name="reverse_labouchere">Reverse Labouchere</string>
    <string name="fibonacci">Fibonacci</string>
    <string name="fly_fibonacci">Fly Fibonacci</string>
    <string name="classic">Classic</string>
    <string name="classic_2">Classic 2</string>
    <string name="martiangel_custom">Martiangel Custom</string>
    <string name="custom">Custom</string>
    <string name="custom_2">Custom 2</string>
    <string name="balance">Balance</string>
    <string name="suck">Suck</string>
    <string name="lot">Lot</string>
    <string name="probability">Probability</string>
    <string name="percent">%</string>
    <string name="doubleText">Double</string>
    <string name="halfText">Half</string>
    <string name="resetText">Reset</string>
    <string name="title_activity_home_content">HomeContentActivity</string>
    <string name="title_activity_try">TryActivity</string>
    <string name="withdraw">Withdraw</string>
    <string name="wallet">Wallet</string>
    <string name="provider_a">Provider A #</string>
    <string name="target">Target</string>
    <string name="percent_text">Percent</string>
    <string name="stop">Stop</string>
    <string name="level_of_courage">Level Of Courage</string>
    <string name="drag_to_increase_your_level_of_courage">drag to increase your level of courage (recommendation: 1%)</string>
    <string name="size">Size</string>
    <string name="capacity">Capacity</string>
    <string name="damnification_increase">Damnification Increase</string>
    <string name="stop_lose">Stop Lose</string>
    <string name="multy_play">Multyply</string>
    <string name="deposit">Deposit</string>
    <string name="copy">Copy</string>
    <string name="paste">Paste</string>
    <string name="nominal">Nominal</string>
    <string name="unique_code">Unique Code</string>
    <string name="get_unique_code">Get Unique Code</string>
</resources>
