<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Black"
    tools:context=".RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:contentDescription="@string/logo"
            android:scaleType="centerCrop"
            app:srcCompat="@mipmap/ic_launcher_title_foreground" />

        <EditText
            android:id="@+id/sponsorEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:autofillHints="@string/sponsor"
            android:backgroundTint="@color/Danger"
            android:ems="10"
            android:focusedByDefault="true"
            android:hint="@string/sponsor"
            android:inputType="textPersonName"
            android:textColor="@color/textPrimary"
            android:textColorHint="@color/textSecondary"
            tools:targetApi="o" />

        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:autofillHints="@string/sponsor"
            android:backgroundTint="@color/Danger"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColor="@color/textPrimary"
            android:textColorHint="@color/textSecondary"
            tools:targetApi="o" />

        <EditText
            android:id="@+id/nameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:autofillHints="@string/sponsor"
            android:backgroundTint="@color/Danger"
            android:ems="10"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:textColor="@color/textPrimary"
            android:textColorHint="@color/textSecondary"
            tools:targetApi="o" />

        <EditText
            android:id="@+id/usernameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:autofillHints="@string/sponsor"
            android:backgroundTint="@color/Danger"
            android:ems="10"
            android:hint="@string/username"
            android:inputType="textPersonName"
            android:textColor="@color/textPrimary"
            android:textColorHint="@color/textSecondary"
            tools:targetApi="o" />

        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:autofillHints="@string/sponsor"
            android:backgroundTint="@color/Danger"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="@color/textPrimary"
            android:textColorHint="@color/textSecondary"
            tools:targetApi="o" />

        <CheckBox
            android:id="@+id/termCheckBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/Danger"
            android:textColor="@color/textPrimary"
            android:text="@string/term" />

        <Button
            android:id="@+id/registerButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="50dp"
            android:background="@drawable/button_danger"
            android:text="@string/register"
            android:textColor="@color/textPrimary"
            tools:ignore="ButtonStyle" />

    </LinearLayout>

</ScrollView>