<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Black"
    tools:context=".content.bot.ManualBotActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.anychart.AnyChartView
            android:id="@+id/chart"
            android:layout_width="match_parent"
            android:layout_height="200dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/usernameTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/username"
                android:textAlignment="center"
                android:textColor="@color/textPrimary" />

            <TextView
                android:id="@+id/balanceTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/balance"
                android:textAlignment="center"
                android:textColor="@color/textPrimary" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/lot"
                android:textAlignment="center"
                android:textColor="@color/textPrimary" />

            <EditText
                android:id="@+id/lotEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/Danger"
                android:ems="10"
                android:importantForAutofill="no"
                android:inputType="numberDecimal"
                android:textColor="@color/textPrimary"
                android:textColorHint="@color/textSecondary"
                tools:ignore="LabelFor" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.55"
                android:text="@string/probability"
                android:textAlignment="center"
                android:textColor="@color/textPrimary" />

            <EditText
                android:id="@+id/probabilityEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/Danger"
                android:ems="10"
                android:importantForAutofill="no"
                android:inputType="numberDecimal"
                android:textColor="@color/textPrimary"
                android:textColorHint="@color/textSecondary"
                tools:ignore="LabelFor" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"
                android:text="@string/percent"
                android:textAlignment="center"
                android:textColor="@color/textPrimary" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/doubleButton"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/button_primary"
                android:text="@string/doubleText"
                android:textColor="@color/textPrimary"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/halfButton"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/button_info"
                android:text="@string/halfText"
                android:textColor="@color/textPrimary"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/resetButton"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/button_warning"
                android:text="@string/resetText"
                android:textColor="@color/textPrimary"
                tools:ignore="ButtonStyle" />

        </LinearLayout>

        <Button
            android:id="@+id/baitButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/button_danger"
            android:text="@string/suck" />

    </LinearLayout>

</ScrollView>