<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/Black"
        tools:context=".content.WithdrawActivity">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_margin="20dp"
            android:layout_height="wrap_content">

        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <TextView
                    android:id="@+id/usernameTextView"
                    android:text="@string/username"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:textAlignment="center"
                    android:textColor="@color/textPrimary"
                    android:layout_height="wrap_content"/>

            <TextView
                    android:id="@+id/balanceTextView"
                    android:text="@string/balance"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:textAlignment="center"
                    android:textColor="@color/textPrimary"
                    android:layout_height="wrap_content"/>

        </LinearLayout>

        <TextView
                android:layout_margin="20dp"
                android:textAlignment="center"
                android:textColor="@color/textPrimary"
                android:text="@string/wallet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        <TextView
                android:id="@+id/walletTextView"
                android:textAlignment="center"
                android:textColor="@color/textPrimary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        <Button
                android:text="@string/paste"
                android:layout_margin="20dp"
                android:layout_gravity="end"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:background="@drawable/button_info"
                android:textColor="@color/textPrimary"
                android:id="@+id/pasteButton"/>

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nominal"
                android:textAlignment="center"
                android:textColor="@color/textPrimary"/>

        <EditText
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:id="@+id/nominalEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/Danger"
                android:ems="10"
                android:minLines="100"
                android:importantForAutofill="no"
                android:inputType="numberDecimal"
                android:labelFor="@id/percentTextView"
                android:textAlignment="center"
                android:textColor="@color/textPrimary"
                android:textColorHint="@color/textSecondary"
                tools:ignore="LabelFor"/>

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/unique_code"
                android:textAlignment="center"
                android:textColor="@color/textPrimary"/>

        <LinearLayout
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <EditText
                    android:id="@+id/uniqueCodeEditText"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/Danger"
                    android:ems="10"
                    android:minLines="100"
                    android:importantForAutofill="no"
                    android:inputType="numberDecimal"
                    android:labelFor="@id/percentTextView"
                    android:textAlignment="center"
                    android:textColor="@color/textPrimary"
                    android:textColorHint="@color/textSecondary"
                    tools:ignore="LabelFor"/>

            <Button
                    android:text="@string/get_unique_code"
                    android:layout_margin="20dp"
                    android:layout_width="160dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_info"
                    android:textColor="@color/textPrimary"
                    android:id="@+id/codeButton"/>

        </LinearLayout>

        <Button
                android:text="@string/withdraw"
                android:layout_margin="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_success"
                android:textColor="@color/textPrimary"
                android:id="@+id/withdrawButton"/>

    </LinearLayout>

</ScrollView>