<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/Black"
        tools:context=".content.WalletActivity">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_margin="20dp"
            android:layout_height="wrap_content">

        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <TextView
                    android:id="@+id/usernameTextView"
                    android:text="@string/username"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:textAlignment="center"
                    android:textColor="@color/textPrimary"
                    android:layout_height="wrap_content"/>

            <TextView
                    android:id="@+id/balanceTextView"
                    android:text="@string/balance"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:textAlignment="center"
                    android:textColor="@color/textPrimary"
                    android:layout_height="wrap_content"/>

        </LinearLayout>

        <TextView
                android:layout_margin="20dp"
                android:textAlignment="center"
                android:textColor="@color/textPrimary"
                android:text="Wallet Deposit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        <TextView
                android:id="@+id/walletTextView"
                android:textAlignment="center"
                android:textColor="@color/textPrimary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        <Button
                android:text="@string/copy"
                android:layout_margin="20dp"
                android:layout_gravity="end"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:background="@drawable/button_info"
                android:textColor="@color/textPrimary"
                android:id="@+id/copyButton"/>

    </LinearLayout>

</ScrollView>