<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                     xmlns:app="http://schemas.android.com/apk/res-auto"
                                                     xmlns:tools="http://schemas.android.com/tools"
                                                     android:layout_width="match_parent"
                                                     android:layout_height="match_parent"
                                                     android:background="@color/Black"
                                                     tools:context=".content.HomeActivity">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="@color/colorPrimary"
            android:orientation="horizontal">

        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="50dp"
                android:layout_weight="2"
                android:contentDescription="@string/logo"
                android:scaleType="centerCrop"
                app:srcCompat="@mipmap/ic_launcher_title_foreground"/>

        <ImageButton
                android:id="@+id/logoutButton"
                style="@style/Widget.AppCompat.ImageButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:backgroundTint="@color/Link"
                android:contentDescription="@string/icon"
                android:tint="@color/colorAccent"
                app:srcCompat="@drawable/ic_power_settings_new_black"/>

    </LinearLayout>

    <include layout="@layout/content_home"/>

    <LinearLayout
            android:id="@+id/getWalletLinearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:gravity="center"
            android:orientation="horizontal">

        <TextView
                android:id="@+id/getWalletTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/button_primary"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/deposit"
                android:textColor="@color/textPrimary"
                android:visibility="invisible"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/getWalletFAB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/fab_margin_mini"
                android:tint="@color/colorPrimary"
                app:backgroundTint="@color/Default"
                app:fabSize="mini"
                app:srcCompat="@drawable/ic_account_balance_wallet"/>

    </LinearLayout>

    <LinearLayout
            android:id="@+id/withdrawLinearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:gravity="center"
            android:orientation="horizontal">

        <TextView
                android:id="@+id/withdrawTextView"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:background="@drawable/button_primary"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/withdraw"
                android:textColor="@color/textPrimary"
                android:visibility="invisible"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/withdrawFAB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/fab_margin_mini"
                android:tint="@color/colorPrimary"
                app:backgroundTint="@color/Default"
                app:fabSize="mini"
                app:srcCompat="@drawable/ic_attach_money_black"/>

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="@dimen/fab_margin"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/ic_pets_black_24dp"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>